# hazla-corta-drive

./: .gitignore  .pre-commit-config.yaml  mkdocs.yml  pyproject.toml  readme.md  requirements.txt
docs/: contributing.md
docs/assets/: style.css
docs/guia-rapida/: gmail-a-outlook.md  google-takeout.md  index.md
docs/por-area/: calendario.md  email.md
overrides/: main.html
